@@ -60,8 +60,21 @@ class tx_wecmap_pi3 extends tslib_pibase {
 		$this->pi_setPiVarDefaults();
 		$this->pi_loadLL();
 
+		// check for WEC Table Map static template inclusion
+		if(empty($conf['templateIncluded'])) {
+			global $LANG;
+			if(!is_object($LANG)) {
+				require_once(t3lib_extMgm::extPath('lang').'lang.php');
+				$LANG = t3lib_div::makeInstance('language');
+				$LANG->init($GLOBALS['TSFE']->config['config']['language']);
+			}
+			$LANG->includeLLFile('EXT:wec_map/locallang_db.xml');
+			$out .= $LANG->getLL('pi3TemplateNotIncluded');
+			return $out;
+		}
+		
 		// check for WEC Map API static template inclusion
-		if(empty($conf['output']) && !empty($conf['defaulttitle.'])) {
+		if(empty($conf['output']) && !empty($conf['templateIncluded'])) {
 			global $LANG;
 			if(!is_object($LANG)) {
 				require_once(t3lib_extMgm::extPath('lang').'lang.php');
@@ -73,18 +86,6 @@ class tx_wecmap_pi3 extends tslib_pibase {
 			return $out;
 		}
 
-		// check for WEC Table Map static template inclusion
-		if(empty($conf['defaulttitle.'])) {
-			global $LANG;
-			if(!is_object($LANG)) {
-				require_once(t3lib_extMgm::extPath('lang').'lang.php');
-				$LANG = t3lib_div::makeInstance('language');
-				$LANG->init($GLOBALS['TSFE']->config['config']['language']);
-			}
-			$LANG->includeLLFile('EXT:wec_map/locallang_db.xml');
-			$out .= $LANG->getLL('pi3TemplateNotIncluded');
-			return $out;
-		}
 		/* Initialize the Flexform and pull the data into a new object */
 		$this->pi_initPIflexform();
 		$piFlexForm = $this->cObj->data['pi_flexform'];
