@@ -2,6 +2,7 @@
 [FIXED] "Show info bubble on load" now works again.
 [FIXED] Update API documentation with missing methods.
 [FIXED] Error messages from the API are now properly shown.
-[FIXED] Added another layer to geocoding to make country detection more reliable
-[FIXED] Tweak what we send to the Yahoo geocoder to get more accurate information back
+[FIXED] Added another layer to geocoding to make country detection more reliable.
+[FIXED] Tweak what we send to the Yahoo geocoder to get more accurate information back.
 [FIXED] Changed how low-level zoom markers are shown in FE User Map both in the FE plugin and BE module.
+[FIXED] Checks for template inclusion in WEC Table Map work better now.
